<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.thesis.FragmentHome"
        android:label="@string/tab_title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_class"
        android:name="com.example.thesis.FragmentClass"
        android:label="@string/tab_title_class"
        tools:layout="@layout/fragment_class" />

    <fragment
        android:id="@+id/navigation_forum"
        android:name="com.example.thesis.FragmentForum"
        android:label="@string/title_forum"
        tools:layout="@layout/fragment_forum" />

    <fragment
        android:id="@+id/navigation_lainnya"
        android:name="com.example.thesis.FragmentLainnya"
        android:label="@string/tab_title_etc"
        tools:layout="@layout/fragment_lainnya" />

</navigation>
