<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarVerification"
        style="@style/ActionBar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Login"
        app:titleMarginStart="@dimen/_12sdp"
        app:navigationIcon="@drawable/ic_actionbar_arrow_back" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_100sdp"
        app:layout_constraintTop_toBottomOf="@+id/toolbarVerification">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_logo_two"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:layout_marginStart="24dp"
            android:gravity="center"
            android:text="@string/masuk"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="@font/nunito_sans"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivBack" />
        <TextView
            android:id="@+id/tvLoginDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bismillah, login dan mulailah mengajar"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/nunito_sans"
            android:layout_marginStart="23dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clTopBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_sample_email"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_user_light"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="false"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorDarkGray2"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold"
                    android:theme="@style/TextInputLayoutAppearance" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clEmail">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_password"
                app:layout_constraintTop_toTopOf="parent"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_group_8"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="25"
                    android:selectAllOnFocus="false"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorDarkGray2"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold"
                    android:theme="@style/TextInputLayoutAppearance"/>
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_13sdp"
            android:backgroundTint="@color/green"
            android:background="@drawable/btn_enabled"
            android:text="@string/str_login"
            android:enabled="false"
            android:textAllCaps="false"
            android:fontFamily="@font/nunito_sans"
            android:textColor="@color/colorLightGrey1"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/btnForgotPass"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clPassword"/>
        <TextView
            android:id="@+id/btnForgotPass"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="@dimen/_13sdp"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/forgot"
            android:fontFamily="@font/nunito_sans"
            android:textAllCaps="false"
            android:textColor="@color/green"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btnLogin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clPassword"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
