<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_150sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_logo_two"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:layout_marginStart="24dp"
            android:gravity="center"
            android:text="@string/masuk"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="@font/nunito_sans"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivBack" />
        <TextView
            android:id="@+id/tvLoginDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_description"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/nunito_sans"
            android:layout_marginStart="23dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clTopBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                app:startIconDrawable="@drawable/ic_phone"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Masukkan Email Atau Nomor Whatsapp"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="false"
                    android:clickable="false"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorDarkGray2"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold"
                    android:theme="@style/TextInputLayoutAppearance" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            android:id="@+id/vLine"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="2dp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@color/colorBlack5"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/clEmail"
            app:layout_constraintBottom_toTopOf="@id/btnLogin"
            app:layout_constraintEnd_toStartOf="@+id/tvAtau"/>
        <TextView
            android:id="@+id/tvAtau"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:gravity="center"
            android:text="@string/atau"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorDarkGray2"
            android:textSize="14sp"
            android:fontFamily="@font/nunito_sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clEmail"/>
        <View
            android:id="@+id/vLineTwo"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="2dp"
            android:layout_marginStart="@dimen/_20sdp"
            android:background="@color/colorBlack5"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/clEmail"
            app:layout_constraintBottom_toTopOf="@id/btnLogin"
            app:layout_constraintStart_toEndOf="@+id/tvAtau"/>
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_enabled"
            android:text="@string/str_create_account"
            android:textAllCaps="false"
            android:textColor="@color/colorLightGrey1"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAtau"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
